set(OMNIORB4_STATIC_SRC
    anonObject.cc
    callDescriptor.cc
    constants.cc
    corbaObject.cc
    corbaBoa.cc
    corbaOrb.cc
    corbaFixed.cc
    corbaString.cc
    corbaWString.cc
    current.cc
    dynamicLib.cc
    exception.cc
    exceptn.cc
    initRefs.cc
    interceptors.cc
    invoker.cc
    ior.cc
    libcWrapper.cc
    omniIdentity.cc
    localIdentity.cc
    localObject.cc
    logIOstream.cc
    minorCode.cc
    objectAdapter.cc
    omniInternal.cc
    omniIOR.cc
    omniObjRef.cc
    omniORB.cc
    omniServant.cc
    orbOptions.cc
    orbOptionsFile.cc
    poa.cc
    poamanager.cc
    policy.cc
    portableserver.cc
    proxyFactory.cc
    remoteIdentity.cc
    inProcessIdentity.cc
    shutdownIdentity.cc
    callHandle.cc
    tracedthread.cc
    transportRules.cc
    rmutex.cc
    uri.cc
    omniPolicy.cc
    omniTransport.cc
    cdrStream.cc
    cdrStreamAdapter.cc
    cdrMemoryStream.cc
    cdrValueChunkStream.cc
    giopEndpoint.cc
    giopRope.cc
    giopStrand.cc
    giopStream.cc
    giopServer.cc
    giopWorker.cc
    giopRendezvouser.cc
    GIOP_C.cc
    GIOP_S.cc
    giopStreamImpl.cc
    giopImpl10.cc
    giopImpl11.cc
    giopImpl12.cc
    giopBiDir.cc
    giopMonitor.cc
    SocketCollection.cc
    codeSets.cc
    cs-8bit.cc
    cs-16bit.cc
    cs-8859-1.cc
    cs-UTF-8.cc
    cs-UTF-16.cc
    bootstrapstub.cc
    objectStub.cc
    poastubs.cc
    Namingstub.cc
    tcpSocket.cc
    ./tcp/tcpTransportImpl.cc
    ./tcp/tcpConnection.cc
    ./tcp/tcpEndpoint.cc
    ./tcp/tcpAddress.cc
    ./tcp/tcpActive.cc
    ./unix/unixTransportImpl.cc
    ./unix/unixConnection.cc
    ./unix/unixEndpoint.cc
    ./unix/unixAddress.cc
    ./unix/unixActive.cc)
add_library(omniORB4_static STATIC ${OMNIORB4_STATIC_SRC})
target_compile_definitions(omniORB4_static PRIVATE _REENTRANT USE_omniORB_logStream _OMNIORB_LIBRARY OMNIORB_VERSION_STRING="4.2.2" OMNIORB_VERSION_HEX='0x040202F1' CONFIG_DEFAULT_LOCATION="/etc/omniORB.cfg" CONFIG_ENV="OMNIORB_CONFIG" UnixArchitecture)
target_include_directories(omniORB4_static PRIVATE .. ./.. ../../../../include/omniORB4/internal ../../../../include/omniORB4/internal . . ../../../../include ../../../../include)
target_compile_options(omniORB4_static PRIVATE -Wno-unused -fexceptions )


set(OMNIORB4_SHARED_SRC
    anonObject.cc
    callDescriptor.cc
    constants.cc
    corbaObject.cc
    corbaBoa.cc
    corbaOrb.cc
    corbaFixed.cc
    corbaString.cc
    corbaWString.cc
    current.cc
    dynamicLib.cc
    exception.cc
    exceptn.cc
    initRefs.cc
    interceptors.cc
    invoker.cc
    ior.cc
    libcWrapper.cc
    omniIdentity.cc
    localIdentity.cc
    localObject.cc
    logIOstream.cc
    minorCode.cc
    objectAdapter.cc
    omniInternal.cc
    omniIOR.cc
    omniObjRef.cc
    omniORB.cc
    omniServant.cc
    orbOptions.cc
    orbOptionsFile.cc
    poa.cc
    poamanager.cc
    policy.cc
    portableserver.cc
    proxyFactory.cc
    remoteIdentity.cc
    inProcessIdentity.cc
    shutdownIdentity.cc
    callHandle.cc
    tracedthread.cc
    transportRules.cc
    rmutex.cc
    uri.cc
    omniPolicy.cc
    omniTransport.cc
    cdrStream.cc
    cdrStreamAdapter.cc
    cdrMemoryStream.cc
    cdrValueChunkStream.cc
    giopEndpoint.cc
    giopRope.cc
    giopStrand.cc
    giopStream.cc
    giopServer.cc
    giopWorker.cc
    giopRendezvouser.cc
    GIOP_C.cc
    GIOP_S.cc
    giopStreamImpl.cc
    giopImpl10.cc
    giopImpl11.cc
    giopImpl12.cc
    giopBiDir.cc
    giopMonitor.cc
    SocketCollection.cc
    codeSets.cc
    cs-8bit.cc
    cs-16bit.cc
    cs-8859-1.cc
    cs-UTF-8.cc
    cs-UTF-16.cc
    bootstrapstub.cc
    objectStub.cc
    poastubs.cc
    Namingstub.cc
    tcpSocket.cc
    ./tcp/tcpTransportImpl.cc
    ./tcp/tcpConnection.cc
    ./tcp/tcpEndpoint.cc
    ./tcp/tcpAddress.cc
    ./tcp/tcpActive.cc
    ./unix/unixTransportImpl.cc
    ./unix/unixConnection.cc
    ./unix/unixEndpoint.cc
    ./unix/unixAddress.cc
    ./unix/unixActive.cc)
add_library(omniORB4 SHARED ${OMNIORB4_SHARED_SRC})
target_link_libraries(omniORB4 PRIVATE omnithread pthread)
target_compile_definitions(omniORB4 PRIVATE _REENTRANT USE_omniORB_logStream _OMNIORB_LIBRARY OMNIORB_VERSION_STRING="4.2.2" OMNIORB_VERSION_HEX='0x040202F1' CONFIG_DEFAULT_LOCATION="/etc/omniORB.cfg" CONFIG_ENV="OMNIORB_CONFIG" UnixArchitecture)
target_include_directories(omniORB4 PRIVATE .. ./.. ../../../../include/omniORB4/internal ../../../../include/omniORB4/internal . . ../../../../include ../../../../include)
target_compile_options(omniORB4 PRIVATE -Wno-unused -fexceptions  )